[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ksef-tools"
dynamic = ["version"]
description = "CLI tools for the Polish National e-Invoice System (KSeF)"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "ksef-client",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[project.scripts]
ksef-tools = "ksef_tools.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "ksef_tools.version._VERSION"}
